omcpctl/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
#  annotations:
#    metallb.universe.tf/address-pool: default
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
